load("@rules_cc//cc:defs.bzl", "cc_library")


cc_library(
    name = "ncurses",
    hdrs = [
        "/usr/include/curses.h",
        "/usr/include/cursesapp.h",
        "/usr/include/cursesf.h",
        "/usr/include/cursesm.h",
        "/usr/include/cursesp.h",
        "/usr/include/cursesw.h",
        "/usr/include/cursslk.h",
        "/usr/include/eti.h",
        "/usr/include/etip.h",
        "/usr/include/form.h",
        "/usr/include/menu.h",
        "/usr/include/nc_tparm.h",
        "/usr/include/ncurses_dll.h",
        "/usr/include/ncursesw",
        "/usr/include/panel.h",
        "/usr/include/term.h",
        "/usr/include/term_entry.h",
        "/usr/include/termcap.h",
        "/usr/include/tic.h",
        "/usr/include/unctrl.h",
        "/usr/include/ncurses.h",
    ],
    srcs = [
        "/usr/lib/x86_64-linux-gnu/libcurses.a",
        "/usr/lib/x86_64-linux-gnu/libcurses.so",
        "/usr/lib/x86_64-linux-gnu/libform.a",
        "/usr/lib/x86_64-linux-gnu/libform.so",
        "/usr/lib/x86_64-linux-gnu/libformw.so",
        "/usr/lib/x86_64-linux-gnu/libmenu.a",
        "/usr/lib/x86_64-linux-gnu/libmenu.so",
        "/usr/lib/x86_64-linux-gnu/libmenuw.so",
        "/usr/lib/x86_64-linux-gnu/libncurses.a",
        "/usr/lib/x86_64-linux-gnu/libncurses.so",
        "/usr/lib/x86_64-linux-gnu/libncurses++.a",
        "/usr/lib/x86_64-linux-gnu/libpanel.a",
        "/usr/lib/x86_64-linux-gnu/libpanel.so",
        "/usr/lib/x86_64-linux-gnu/libtermcap.a",
        "/usr/lib/x86_64-linux-gnu/libtermcap.so",
        "/usr/lib/x86_64-linux-gnu/libtic.a",
        "/usr/lib/x86_64-linux-gnu/libtic.so",
        "/usr/lib/x86_64-linux-gnu/libtinfo.a",
        "/usr/lib/x86_64-linux-gnu/libtinfo.so",
    ],
    strip_include_prefix = "/usr/include/",
    visibility = ["//visibility:public"],
)
